--- a/examples/basic/index.html
+++ b/examples/basic/index.html
@@ -27,8 +27,8 @@
       <!--a-entity position='0 5 0' geometry='primitive: box' ></a-entity-->
       <a-entity id='defaultPlane' position='0 1 0' geometry='primitive: triangleset'></a-entity>
       <!-- primitive with position somehow get inherited to following objects -->
-      <a-triangleset id='defaultPlane2' position='0 7 0' ></a-entity>
-      <a-triangleset id='largeTriangle' vertices='-1 1 0, 1 1 0, 0 4 0' triangles='0 1 2' material="color: #F70F24" position="0 -7 0"></a-entity>
+      <a-triangleset id='defaultPlane2' position='0 7 0' ></a-triangleset>
+      <a-triangleset id='largeTriangle' vertices='-1 1 0, 1 1 0, 0 4 0' triangles='0 1 2' material="color: #F70F24" position="0 -7 0"></a-triangleset>
       <a-entity id='forTriangulation2' geometry="primitive: triangleset; vertices: 0 -1 1, 0 1 1, 0 1 -1, 0 -1 -1, -3 0 0; projectdir: x" 
         material="color: green; roughness: 0.1; metalness: 0.5; side: double" position="-3 2 0"></a-entity>
       <a-entity id='ImagePlane' geometry="primitive: triangleset; vertices: -1 -1 0, 1 -1 0, 1 1 0, -1.5 1.5 0; uvs: 0 0, 1 0, 1 1, 0 1" 
